# sharedmemory

sonatus/: .build.sh.swp  CMakeLists.txt  build.sh  clear.sh
sonatus/client/src/: main.cpp
sonatus/libIpc/inc/: IpcController.h  IpcMessage.h
sonatus/libIpc/inc/model/: IpcRequest.h  IpcResponse.h
sonatus/libIpc/src/: IpcController.cpp  IpcMessage.cpp
sonatus/server/src/: main.cpp
